# libcolutius

./: .gitignore  CMakeLists.txt  Channel_8cpp.html  Channel_8h.html  Channel_8h.js  Channel_8h_source.html  Doxyfile  Message_8cpp.html  Message_8h.html  Message_8h.js  Message_8h_source.html  README.md  README_8md.html  Server_8cpp.html  Server_8h.html  Server_8h.js  Server_8h_source.html  Session_8cpp.html  Session_8h.html  Session_8h.js  Session_8h_source.html  User_8cpp.html  User_8h.html  User_8h.js  User_8h_source.html  annotated.html  annotated_dup.js  classChannel-members.html  classChannel.html  classChannel.js  classMessage-members.html  classMessage.html  classMessage.js  classServer-members.html  classServer.html  classServer.js  classSession-members.html  classSession.html  classSession.js  classUser-members.html  (+24 more)
.github/workflows/: Backup.yml  CI.yml  Doxygen.yml  TelegramBot.yml
Demo/: CMakeLists.txt  main.cpp
scripts/: main.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  enumvalues_9.js  enumvalues_b.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  (+14 more)
src/: CMakeLists.txt  Channel.cpp  Channel.h  Message.cpp  Message.h  Server.cpp  Server.h  Session.cpp  Session.h  User.cpp  User.h
src/Channel/: CMakeLists.txt  Channel.cpp
src/Demo/: CMakeLists.txt  main.cpp
src/Message/: CMakeLists.txt  Message.cpp  Message.h
src/Server/: CMakeLists.txt  Server.cpp  Server.h
